@@ -1,6 +1,9 @@
 Version ?.?.?? (released ??-??-????):
 
 	* New ship pictures.
+	* UI usability improvements: starchart panning don't need the
+	  shift key anymore, the planets and ships get centered when
+   	  double-clicking on them.
 
 Version 0.2.13 (released 05-03-2004):
 
